fix -webkit-text-stroke overlapping issue by self hosting Noto Sans JP font

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,17 @@
+@font-face {
+  font-family: 'Noto Sans JP';
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: normal;
+  font-named-instance: 'Regular';
+  src: url(/fonts/NotoSansJP-Regular.ttf) format("truetype");
+}
+
 /****************************
 General
 ****************************/
 html,
 body {
-  font-family: Noto Sans JP;
   z-index: 0;
   letter-spacing: 0.1em;
   color: #000852;
